# ra-fsp-sys

./: .gitmodules  Cargo.toml  build.rs  ra-fsp-sys.x.in  ra_fsp_wrapper.h
.cargo/: config.toml
.helix/: languages.toml
fsp_cfg/: r_flash_hp_cfg.h.in
fsp_cfg/bsp/: bsp_cfg.h.in  bsp_mcu_family_cfg.h
ra_gen/: vector_data.h
script/: memory_regions_base.ld  memory_regions_bld.ld  memory_regions_standalone.ld  ra-fsp-sys.x
src/: ether.rs  ether_phy.rs  ioport.rs  lib.rs  macros.rs
src_c/: init.c  system.c
wrapper/: api.h  r_flash_hp.h  r_icu.h
