[package]
name = "ra-fsp-sys"
version = "0.1.1"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"

[build-dependencies]
bindgen = "0.69"
cc = "1.1"
walkdir = "2"
build_cfg = "1.1"
tera = "1.20"

[features]
default = [
  "bsp-mcu_vcc_mv_3300", "bsp-stack_main_bytes_16384",
  "mod-r_dmac",
  "mod-r_elc",
  "mod-r_flash_hp", "mod-r_flash_hp-code_flash_programming_enable", "mod-r_flash_hp-data_flash_programming_enable",
  "mod-r_icu",
  "mod-r_ioport",
]

bsp-mcu_vcc_mv_2700 = []
bsp-mcu_vcc_mv_3300 = []
bsp-mcu_vcc_mv_5000 = []
bsp-stack_main_bytes_4096 = []
bsp-stack_main_bytes_8192 = []
bsp-stack_main_bytes_16384 = []

mod-r_dmac = []
mod-r_elc = []

mod-r_flash_hp = []
mod-r_flash_hp-code_flash_programming_enable = []
mod-r_flash_hp-data_flash_programming_enable = []

mod-r_icu = []
mod-r_ioport = []

# todo: support stuff except ra6m3
ra0e1 = []
ra2a1 = []
ra2a2 = []
ra2e1 = []
ra2e2 = []
ra2e3 = []
ra2l1 = []
ra4e1 = []
ra4e2 = []
ra4m1 = []
ra4m2 = []
ra4m3 = []
ra4t1 = []
ra4w1 = []
ra6e1 = []
ra6e2 = []
ra6m1 = []
ra6m2 = []
ra6m3 = []
ra6m4 = []
ra6m5 = []
ra6t1 = []
ra6t2 = []
ra6t3 = []
ra8m1 = []
ra8d1 = []
ra8t1 = []

